<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
<TextView
	android:id="@+id/order_review_title"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/order_review_message"
	android:gravity="center"
	android:textStyle="bold"
	android:padding="25dp"
	android:textSize="28sp" 
	android:textColor="@android:color/white"
	/>
    
    <TextView
        android:id="@+id/order_field"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/white"/> 
       <TextView
        android:id="@+id/name_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/white"/>
       <EditText
       android:id="@+id/name_field"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:hint="@string/name_hint"
       android:padding="15dp"
       android:background="@drawable/gradient_bg"
       android:textSize="19sp"
       android:textStyle="bold"
       android:textColor="@android:color/black"
       android:inputType="text"
       />
        <TextView
        android:id="@+id/comments_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments_title"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/white"
    	android:background="@android:color/black"/>
    <EditText
       android:id="@+id/comments_field"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:background="@drawable/gradient_bg"
       android:padding="15dp"
       android:textSize="19sp"
       android:textColor="@android:color/white"
       android:textStyle="bold"
       android:hint="@string/comments_hint"
       android:inputType="textMultiLine"/>
    	<TextView
        android:id="@+id/arrival_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrival_time"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/white"
    	android:background="@android:color/black"/>
        <LinearLayout 
       android:orientation="horizontal"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:background="#00000000">
	    <EditText
       android:id="@+id/minutes_field"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:textSize="19sp"
       android:textColor="@android:color/white"
       android:textStyle="bold"
       android:inputType="number"
       android:hint="@string/time_hint"
       />
	    <TextView
        android:id="@+id/minutes_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/white"/>
        </LinearLayout>
        <Button
            android:id="@+id/send_order"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dip"
            android:text="@string/send_order"
            android:textColor="@android:color/white"/>
        <ImageView
            android:id="@+id/footer_image"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/coffee_cup"/>
</LinearLayout>

</ScrollView>