<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<TextView
	android:id="@+id/milk_options_title"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/select_milk"
	android:gravity="center"
	android:textStyle="bold"
	android:padding="10dp"
	android:textSize="28dp" 
	android:textColor="@android:color/white"
	/>
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg"
       android:padding="15dp">
       <TextView
        android:id="@+id/two_percent_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_percent"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/two_percent_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
  
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        android:padding="15dp">
       <TextView
        android:id="@+id/nonfat_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonfat"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/nonfat_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg"
       android:padding="15dp">
       <TextView
        android:id="@+id/whole_milk_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whole"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/whole_milk_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
       <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg"
       android:padding="15dp">
       <TextView
        android:id="@+id/soy_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soy"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/soy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
       
       <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg"
       android:padding="15dp">
       <TextView
        android:id="@+id/hemp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hemp"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/hemp_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
       </LinearLayout>
       
       <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg"
       android:padding="15dp">
       <TextView
        android:id="@+id/breve_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breve"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/breve_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/send_milk_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dip"
            android:background="@drawable/gradient_bg"
            android:text="@string/select_size"
            android:textColor="@android:color/black"/>
            </LinearLayout>
  </ScrollView>