<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
     
        <TextView
        android:id="@+id/hot_or_iced"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="28dp"
        android:text="@string/hot_or_iced"
		android:textStyle="bold"
		android:textSize="28dp" 
    	android:textColor="@android:color/white"/>
  	   <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg">
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hotTextView"
        android:text="@string/hot"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/hot_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
       <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
	   android:background="@drawable/gradient_bg">
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coldTextView"
        android:text="@string/iced"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/cold_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    <TextView
	android:id="@+id/main_menu_title"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/select_size"
	android:gravity="center"
	android:textStyle="bold"
	android:padding="25dp"
	android:textSize="28dp" 
    android:textColor="@android:color/white"/>
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg">
       <TextView
        android:id="@+id/to_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twelve_ounces"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/to_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg">
       <TextView
        android:id="@+id/so_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixteen_ounces"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/sixteenounce_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    <LinearLayout 
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg">
       <TextView
        android:id="@+id/twentyOunce_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty_ounces"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
		<CheckBox
        android:id="@+id/twentyounce_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        </LinearLayout>
       <LinearLayout 
       android:id="@+id/twentyfour_ll"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:background="@drawable/gradient_bg">
       <TextView
        android:id="@+id/twentyFourOunce_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twentyfour_ounces"
        android:padding="10dp"
        android:textSize="21sp"
    	android:textStyle="bold" 
    	android:textColor="@android:color/black"/>
     <ImageView android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_action_forward"
        android:layout_gravity="right"/>
        </LinearLayout>   
        <LinearLayout 
    					android:layout_width="match_parent"
    					android:layout_height="wrap_content"
    					android:orientation="vertical" 
    					android:background="@android:color/background_dark">
            <ImageView
            android:id="@+id/footer_image"
            android:layout_marginTop="20dp"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/coffee_cup"/>
            
            <TextView 
               android:id="@+id/order_status"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_margin="15dp"
               android:textSize="14dp"
               android:text="Order Status: "
               android:textColor="@android:color/holo_green_dark"/>
   
</LinearLayout>
      </LinearLayout>
    </ScrollView>
